[package]
name = "user-center"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
repository = "https://github.com/AxumCourse/user-center"
homepage = "https://axum.rs"
description = "axum.rs专题：使用axum构建用户中心"

[dependencies]
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
axum = "0.5"
config = "0.13"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
